--- a/index.html
+++ b/index.html
@@ -467,17 +467,17 @@
 
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <div class="close-btn" data-modal-close>
+        <button class="close-btn" type="button" data-modal-close>
           <svg class="close-btn__icon" width="18" height="18">
             <use href="./images/icons/icons.svg#close"></use>
           </svg>
-        </div>
+        </button>
         <form class="form" name="main-form" autocomplete="off">
           <div class="form__group" role="group" aria-labelledby="contact-details-head">
             <h2 class="form__title" id="contact-details-head">
               Залиште свої дані, ми вам передзвонимо
             </h2>
-            <label class="field">
+            <label class="field modal__field">
               <input
                 class="field__input"
                 type="text"
@@ -490,7 +490,7 @@
                 <use href="./images/icons/icons.svg#person"></use>
               </svg>
             </label>
-            <label class="field">
+            <label class="field modal__field">
               <input
                 class="field__input"
                 type="tel"
@@ -503,7 +503,7 @@
                 <use href="./images/icons/icons.svg#phone"></use>
               </svg>
             </label>
-            <label class="field">
+            <label class="field modal__field">
               <input
                 class="field__input"
                 type="email"
@@ -515,7 +515,7 @@
                 <use href="./images/icons/icons.svg#email"></use>
               </svg>
             </label>
-            <label class="comments-field">
+            <label class="comments-field modal__comments-field">
               <textarea
                 class="comments-field__textarea"
                 name="feedback"
@@ -524,7 +524,7 @@
               <span class="comments-field__label">Коментар</span>
             </label>
           </div>
-          <label class="checkbox">
+          <label class="checkbox modal__checkbox">
             <input class="checkbox__input" type="checkbox" name="terms-check" value="terms-check" />
             <svg class="checkbox__icon" width="11" height="8">
               <use class="checkbox__content" href="./images/icons/icons.svg#check"></use>
