fix footer subscribe form

--- a/portfolio.html
+++ b/portfolio.html
@@ -578,7 +578,7 @@
               autocomplete="off"
             />
           </label>
-          <button class="button subscribe-form__btn" type="submit">
+          <button class="button" type="submit">
             Підписатися
             <svg class="button__icon" width="24" height="24" aria-hidden="true">
               <use href="./images/icons/icons.svg#send"></use>
