--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
       <section class="benefits">
         <div class="container">
-          <h2 class="benefits__title visually-hidden">Особливості</h2>
+          <h2 class="benefits__title">Особливості</h2>
           <ul class="card-set">
             <li class="benefits__item">
               <div class="benefits__logo">
