--- a/portfolio.html
+++ b/portfolio.html
@@ -93,7 +93,7 @@
 
       <section class="portfolio">
         <div class="container">
-          <h2 class="portfolio__title visually-hidden">Портфоліо</h2>
+          <h2 class="portfolio__title">Портфоліо</h2>
           <ul class="filters card-set">
             <li class="filters__item">
               <button type="button" class="filters__button filters__button--active">Все</button>
