--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
       <section class="benefits">
         <div class="container">
-          <h2 class="benefits__title">Особливості</h2>
+          <h2 class="benefits__title visually-hidden">Особливості</h2>
           <ul class="card-set">
             <li class="benefits__item">
               <div class="benefits__logo">
@@ -162,6 +162,7 @@
             <li class="work__item">
               <img
                 class="work__img"
+                srcset="./images/work/box-1@2x.jpg 2x"
                 src="./images/work/box-1.jpg"
                 alt="Верстка сайта"
                 width="370"
@@ -173,6 +174,7 @@
             <li class="work__item">
               <img
                 class="work__img"
+                srcset="./images/work/box-2@2x.jpg 2x"
                 src="./images/work/box-2.jpg"
                 alt="Створення стиля"
                 width="370"
@@ -184,6 +186,7 @@
             <li class="work__item">
               <img
                 class="work__img"
+                srcset="./images/work/box-3@2x.jpg 2x"
                 src="./images/work/box-3.jpg"
                 alt="Вибір кольорової палітри"
                 width="370"
@@ -202,24 +205,8 @@
         <div class="container">
           <h2 class="team__title">Наша Команда</h2>
           <ul class="card-set">
-            <li class="team__item card-set__item">
+            <li class="team__item">
               <picture>
-                <source
-                  srcset="
-                    ./images/team/ihor/ihor-mobile.webp    1x,
-                    ./images/team/ihor/ihor-mobile@2x.webp 2x
-                  "
-                  type="image/webp"
-                  media="(max-width: 767px)"
-                />
-                <source
-                  srcset="
-                    ./images/team/ihor/ihor-mobile.jpg    1x,
-                    ./images/team/ihor/ihor-mobile@2x.jpg 2x
-                  "
-                  type="image/jpg"
-                  media="(max-width: 767px)"
-                />
                 <source
                   srcset="
                     ./images/team/ihor/ihor-desktop.webp    1x,
@@ -244,6 +231,7 @@
                     ./images/team/ihor/ihor-tablet@2x.webp 2x
                   "
                   type="image/webp"
+                  media="(min-width: 768px)"
                 />
                 <source
                   srcset="
@@ -251,10 +239,28 @@
                     ./images/team/ihor/ihor-tablet@2x.jpg 2x
                   "
                   type="image/jpg"
+                  media="(min-width: 768px)"
+                />
+
+                <source
+                  srcset="
+                    ./images/team/ihor/ihor-mobile.webp    1x,
+                    ./images/team/ihor/ihor-mobile@2x.webp 2x
+                  "
+                  type="image/webp"
+                  media="(max-width: 767px)"
+                />
+                <source
+                  srcset="
+                    ./images/team/ihor/ihor-mobile.jpg    1x,
+                    ./images/team/ihor/ihor-mobile@2x.jpg 2x
+                  "
+                  type="image/jpg"
+                  media="(max-width: 767px)"
                 />
                 <img
                   class="team__img"
-                  src="./images/team/ihor/ihor-tablet.jpg"
+                  src="./images/team/ihor/ihor-mobile.jpg"
                   alt="фото Ігоря Дем'яненка"
                 />
               </picture>
@@ -291,24 +297,8 @@
                 </li>
               </ul>
             </li>
-            <li class="team__item card-set__item">
+            <li class="team__item">
               <picture>
-                <source
-                  srcset="
-                    ./images/team/olga/olga-mobile.webp    1x,
-                    ./images/team/olga/olga-mobile@2x.webp 2x
-                  "
-                  type="image/webp"
-                  media="(max-width: 767px)"
-                />
-                <source
-                  srcset="
-                    ./images/team/olga/olga-mobile.jpg    1x,
-                    ./images/team/olga/olga-mobile@2x.jpg 2x
-                  "
-                  type="image/jpg"
-                  media="(max-width: 767px)"
-                />
                 <source
                   srcset="
                     ./images/team/olga/olga-desktop.webp    1x,
@@ -333,6 +323,7 @@
                     ./images/team/olga/olga-tablet@2x.webp 2x
                   "
                   type="image/webp"
+                  media="(min-width: 768px)"
                 />
                 <source
                   srcset="
@@ -340,10 +331,28 @@
                     ./images/team/olga/olga-tablet@2x.jpg 2x
                   "
                   type="image/jpg"
+                  media="(min-width: 768px)"
+                />
+
+                <source
+                  srcset="
+                    ./images/team/olga/olga-mobile.webp    1x,
+                    ./images/team/olga/olga-mobile@2x.webp 2x
+                  "
+                  type="image/webp"
+                  media="(max-width: 767px)"
+                />
+                <source
+                  srcset="
+                    ./images/team/olga/olga-mobile.jpg    1x,
+                    ./images/team/olga/olga-mobile@2x.jpg 2x
+                  "
+                  type="image/jpg"
+                  media="(max-width: 767px)"
                 />
                 <img
                   class="team__img"
-                  src="./images/team/olga/olga-tablet.jpg"
+                  src="./images/team/olga/olga-mobile.jpg"
                   alt="фото Ольги Репіної"
                 />
               </picture>
@@ -380,24 +389,8 @@
                 </li>
               </ul>
             </li>
-            <li class="team__item card-set__item">
+            <li class="team__item">
               <picture>
-                <source
-                  srcset="
-                    ./images/team/nikola/nikola-mobile.webp    1x,
-                    ./images/team/nikola/nikola-mobile@2x.webp 2x
-                  "
-                  type="image/webp"
-                  media="(max-width: 767px)"
-                />
-                <source
-                  srcset="
-                    ./images/team/nikola/nikola-mobile.jpg    1x,
-                    ./images/team/nikola/nikola-mobile@2x.jpg 2x
-                  "
-                  type="image/jpg"
-                  media="(max-width: 767px)"
-                />
                 <source
                   srcset="
                     ./images/team/nikola/nikola-desktop.webp    1x,
@@ -422,6 +415,7 @@
                     ./images/team/nikola/nikola-tablet@2x.webp 2x
                   "
                   type="image/webp"
+                  media="(min-width: 768px)"
                 />
                 <source
                   srcset="
@@ -429,10 +423,28 @@
                     ./images/team/nikola/nikola-tablet@2x.jpg 2x
                   "
                   type="image/jpg"
+                  media="(min-width: 768px)"
+                />
+
+                <source
+                  srcset="
+                    ./images/team/nikola/nikola-mobile.webp    1x,
+                    ./images/team/nikola/nikola-mobile@2x.webp 2x
+                  "
+                  type="image/webp"
+                  media="(max-width: 767px)"
+                />
+                <source
+                  srcset="
+                    ./images/team/nikola/nikola-mobile.jpg    1x,
+                    ./images/team/nikola/nikola-mobile@2x.jpg 2x
+                  "
+                  type="image/jpg"
+                  media="(max-width: 767px)"
                 />
                 <img
                   class="team__img"
-                  src="./images/team/nikola/nikola-tablet.jpg"
+                  src="./images/team/nikola/nikola-mobile.jpg"
                   alt="фото Миколи Тарасенка"
                 />
               </picture>
@@ -469,24 +481,8 @@
                 </li>
               </ul>
             </li>
-            <li class="team__item card-set__item">
+            <li class="team__item">
               <picture>
-                <source
-                  srcset="
-                    ./images/team/mike/mike-mobile.webp    1x,
-                    ./images/team/mike/mike-mobile@2x.webp 2x
-                  "
-                  type="image/webp"
-                  media="(max-width: 767px)"
-                />
-                <source
-                  srcset="
-                    ./images/team/mike/mike-mobile.jpg    1x,
-                    ./images/team/mike/mike-mobile@2x.jpg 2x
-                  "
-                  type="image/jpg"
-                  media="(max-width: 767px)"
-                />
                 <source
                   srcset="
                     ./images/team/mike/mike-desktop.webp    1x,
@@ -511,6 +507,7 @@
                     ./images/team/mike/mike-tablet@2x.webp 2x
                   "
                   type="image/webp"
+                  media="(min-width: 768px)"
                 />
                 <source
                   srcset="
@@ -518,11 +515,29 @@
                     ./images/team/mike/mike-tablet@2x.jpg 2x
                   "
                   type="image/jpg"
+                  media="(min-width: 768px)"
+                />
+
+                <source
+                  srcset="
+                    ./images/team/mike/mike-mobile.webp    1x,
+                    ./images/team/mike/mike-mobile@2x.webp 2x
+                  "
+                  type="image/webp"
+                  media="(max-width: 767px)"
+                />
+                <source
+                  srcset="
+                    ./images/team/mike/mike-mobile.jpg    1x,
+                    ./images/team/mike/mike-mobile@2x.jpg 2x
+                  "
+                  type="image/jpg"
+                  media="(max-width: 767px)"
                 />
                 <img
                   class="team__img"
-                  src="./images/team/mike/mike-tablet.jpg"
-                  alt="фото Михайла Єрмакова"
+                  src="./images/team/mike/mike-mobile.jpg"
+                  alt="фото Миколи Єрмакова"
                 />
               </picture>
               <h3 class="team__name">Михайло Єрмаков</h3>
