--- a/portfolio.html
+++ b/portfolio.html
@@ -93,7 +93,7 @@
 
       <section class="portfolio">
         <div class="container">
-          <h2 class="portfolio__title">Портфоліо</h2>
+          <h2 class="portfolio__title visually-hidden">Портфоліо</h2>
           <ul class="filters card-set">
             <li class="filters__item">
               <button type="button" class="filters__button filters__button--active">Все</button>
@@ -119,13 +119,6 @@
                   <picture>
                     <source
                       srcset="
-                        ./images/portfolio/1/1-mobile.jpg    1x,
-                        ./images/portfolio/1/1-mobile@2x.jpg 2x
-                      "
-                      media="(max-width: 767px)"
-                    />
-                    <source
-                      srcset="
                         ./images/portfolio/1/1-desktop.jpg    1x,
                         ./images/portfolio/1/1-desktop@2x.jpg 2x
                       "
@@ -136,11 +129,20 @@
                         ./images/portfolio/1/1-tablet.jpg    1x,
                         ./images/portfolio/1/1-tablet@2x.jpg 2x
                       "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/1/1-mobile.jpg    1x,
+                        ./images/portfolio/1/1-mobile@2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
                     />
                     <img
                       class="examples__img"
-                      src="./images/portfolio/1/1-tablet.jpg"
+                      src="./images/portfolio/1/1-mobile.jpg"
                       alt="Технокряк"
+                      media="(min-width: 768px)"
                     />
                   </picture>
                   <div class="overlay">
@@ -151,7 +153,7 @@
                     </p>
                   </div>
                 </div>
-                <div class="examples__inner examples__inner--first">
+                <div class="examples__inner">
                   <h3 class="examples__subtitle">Технокряк</h3>
                   <p class="examples__filter-name">Веб-сайт</p>
                 </div>
@@ -161,13 +163,6 @@
               <a class="examples__link" href="">
                 <div class="examples__wrapper">
                   <picture>
-                    <source
-                      srcset="
-                        ./images/portfolio/2/2-mobile.jpg    1x,
-                        ./images/portfolio/2/2-mobile@2x.jpg 2x
-                      "
-                      media="(max-width: 767px)"
-                    />
                     <source
                       srcset="
                         ./images/portfolio/2/2-desktop.jpg    1x,
@@ -180,10 +175,18 @@
                         ./images/portfolio/2/2-tablet.jpg    1x,
                         ./images/portfolio/2/2-tablet@2x.jpg 2x
                       "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/2/2-mobile.jpg    1x,
+                        ./images/portfolio/2/2-mobile@2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
                     />
                     <img
                       class="examples__img"
-                      src="./images/portfolio/2/2-tablet.jpg"
+                      src="./images/portfolio/2/2-mobile.jpg"
                       alt="Постер New Orlean vs Golden Star"
                     />
                   </picture>
@@ -196,7 +199,9 @@
                   </div>
                 </div>
                 <div class="examples__inner">
-                  <h3 class="examples__subtitle examples__subtitle--divided">Постер New Orlean vs Golden Star</h3>
+                  <h3 class="examples__subtitle examples__subtitle--divided">
+                    Постер New Orlean vs Golden Star
+                  </h3>
                   <p class="examples__filter-name">Дизайн</p>
                 </div>
               </a>
@@ -205,13 +210,6 @@
               <a class="examples__link" href="">
                 <div class="examples__wrapper">
                   <picture>
-                    <source
-                      srcset="
-                        ./images/portfolio/3/3-mobile.jpg    1x,
-                        ./images/portfolio/3/3-mobile@2x.jpg 2x
-                      "
-                      media="(max-width: 767px)"
-                    />
                     <source
                       srcset="
                         ./images/portfolio/3/3-desktop.jpg    1x,
@@ -224,10 +222,18 @@
                         ./images/portfolio/3/3-tablet.jpg    1x,
                         ./images/portfolio/3/3-tablet@2x.jpg 2x
                       "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/3/3-mobile.jpg    1x,
+                        ./images/portfolio/3/3-mobile@2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
                     />
                     <img
                       class="examples__img"
-                      src="./images/portfolio/3/3-tablet.jpg"
+                      src="./images/portfolio/3/3-mobile.jpg"
                       alt="Ресторан Seafood"
                     />
                   </picture>
@@ -251,13 +257,6 @@
                   <picture>
                     <source
                       srcset="
-                        ./images/portfolio/4/4-mobile.jpg    1x,
-                        ./images/portfolio/4/4-mobile@2x.jpg 2x
-                      "
-                      media="(max-width: 767px)"
-                    />
-                    <source
-                      srcset="
                         ./images/portfolio/4/4-desktop.jpg    1x,
                         ./images/portfolio/4/4-desktop@2x.jpg 2x
                       "
@@ -268,10 +267,18 @@
                         ./images/portfolio/4/4-tablet.jpg    1x,
                         ./images/portfolio/4/4-tablet@2x.jpg 2x
                       "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/4/4-mobile.jpg    1x,
+                        ./images/portfolio/4/4-mobile@2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
                     />
                     <img
                       class="examples__img"
-                      src="./images/portfolio/4/4-tablet.jpg"
+                      src="./images/portfolio/4/4-mobile.jpg"
                       alt="Проєкт Prime"
                     />
                   </picture>
@@ -295,13 +302,6 @@
                   <picture>
                     <source
                       srcset="
-                        ./images/portfolio/5/5-mobile.jpg    1x,
-                        ./images/portfolio/5/5-mobile@2x.jpg 2x
-                      "
-                      media="(max-width: 767px)"
-                    />
-                    <source
-                      srcset="
                         ./images/portfolio/5/5-desktop.jpg    1x,
                         ./images/portfolio/5/5-desktop@2x.jpg 2x
                       "
@@ -312,10 +312,18 @@
                         ./images/portfolio/5/5-tablet.jpg    1x,
                         ./images/portfolio/5/5-tablet@2x.jpg 2x
                       "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/5/5-mobile.jpg    1x,
+                        ./images/portfolio/5/5-mobile@2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
                     />
                     <img
                       class="examples__img"
-                      src="./images/portfolio/5/5-tablet.jpg"
+                      src="./images/portfolio/5/5-mobile.jpg"
                       alt="Проєкт Boxes"
                     />
                   </picture>
@@ -339,13 +347,6 @@
                   <picture>
                     <source
                       srcset="
-                        ./images/portfolio/6/6-mobile.jpg    1x,
-                        ./images/portfolio/6/6-mobile@2x.jpg 2x
-                      "
-                      media="(max-width: 767px)"
-                    />
-                    <source
-                      srcset="
                         ./images/portfolio/6/6-desktop.jpg    1x,
                         ./images/portfolio/6/6-desktop@2x.jpg 2x
                       "
@@ -356,10 +357,18 @@
                         ./images/portfolio/6/6-tablet.jpg    1x,
                         ./images/portfolio/6/6-tablet@2x.jpg 2x
                       "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/6/6-mobile.jpg    1x,
+                        ./images/portfolio/6/6-mobile@2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
                     />
                     <img
                       class="examples__img"
-                      src="./images/portfolio/6/6-tablet.jpg"
+                      src="./images/portfolio/6/6-mobile.jpg"
                       alt="Inspiration has no Borders"
                     />
                   </picture>
@@ -383,13 +392,6 @@
                   <picture>
                     <source
                       srcset="
-                        ./images/portfolio/7/7-mobile.jpg    1x,
-                        ./images/portfolio/7/7-mobile@2x.jpg 2x
-                      "
-                      media="(max-width: 767px)"
-                    />
-                    <source
-                      srcset="
                         ./images/portfolio/7/7-desktop.jpg    1x,
                         ./images/portfolio/7/7-desktop@2x.jpg 2x
                       "
@@ -400,10 +402,18 @@
                         ./images/portfolio/7/7-tablet.jpg    1x,
                         ./images/portfolio/7/7-tablet@2x.jpg 2x
                       "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/7/7-mobile.jpg    1x,
+                        ./images/portfolio/7/7-mobile@2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
                     />
                     <img
                       class="examples__img"
-                      src="./images/portfolio/7/7-tablet.jpg"
+                      src="./images/portfolio/7/7-mobile.jpg"
                       alt="Видання Limited Edition"
                     />
                   </picture>
@@ -427,13 +437,6 @@
                   <picture>
                     <source
                       srcset="
-                        ./images/portfolio/8/8-mobile.jpg    1x,
-                        ./images/portfolio/8/8-mobile@2x.jpg 2x
-                      "
-                      media="(max-width: 767px)"
-                    />
-                    <source
-                      srcset="
                         ./images/portfolio/8/8-desktop.jpg    1x,
                         ./images/portfolio/8/8-desktop@2x.jpg 2x
                       "
@@ -444,10 +447,18 @@
                         ./images/portfolio/8/8-tablet.jpg    1x,
                         ./images/portfolio/8/8-tablet@2x.jpg 2x
                       "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/8/8-mobile.jpg    1x,
+                        ./images/portfolio/8/8-mobile@2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
                     />
                     <img
                       class="examples__img"
-                      src="./images/portfolio/8/8-tablet.jpg"
+                      src="./images/portfolio/8/8-mobile.jpg"
                       alt="проєкт LAB"
                     />
                   </picture>
@@ -471,13 +482,6 @@
                   <picture>
                     <source
                       srcset="
-                        ./images/portfolio/9/9-mobile.jpg    1x,
-                        ./images/portfolio/9/9-mobile@2x.jpg 2x
-                      "
-                      media="(max-width: 767px)"
-                    />
-                    <source
-                      srcset="
                         ./images/portfolio/9/9-desktop.jpg    1x,
                         ./images/portfolio/9/9-desktop@2x.jpg 2x
                       "
@@ -488,10 +492,18 @@
                         ./images/portfolio/9/9-tablet.jpg    1x,
                         ./images/portfolio/9/9-tablet@2x.jpg 2x
                       "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/9/9-mobile.jpg    1x,
+                        ./images/portfolio/9/9-mobile@2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
                     />
                     <img
                       class="examples__img"
-                      src="./images/portfolio/9/9-tablet.jpg"
+                      src="./images/portfolio/9/9-mobile.jpg"
                       alt="Growing business"
                     />
                   </picture>
