--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <!-- hero-section -->
 
       <section class="hero">
-        <div class="hero__container">
+        <div class="container">
           <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
           <button type="button" class="button" data-modal-open>Замовити послугу</button>
         </div>
